--- a/.github/workflows/compile.yml
+++ b/.github/workflows/compile.yml
@@ -12,6 +12,8 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
+        with:
+          submodules: recursive
           
       - name: Build latex
         uses: xu-cheng/latex-action@v2
@@ -48,4 +50,3 @@ jobs:
           asset_path: ./${{ env.LATEX_ROOT }}.pdf
           asset_name: ${{ env.LATEX_ROOT }}-${{ steps.bump-version.outputs.new_tag }}-${{ steps.current-time.outputs.time }}.pdf
           asset_content_type: application/pdf
-
